[gd_scene load_steps=5 format=3 uid="uid://cm550g3ucpx4k"]

[ext_resource type="Script" uid="uid://coy3ber1or3oc" path="res://ui/menus/layouts/simple/main_menu.gd" id="1_w5nt6"]
[ext_resource type="FontFile" uid="uid://dytiwtsjtjr02" path="res://assets/fonts/DRUNKFONTS-Regular.otf" id="3_aqxog"]
[ext_resource type="Theme" uid="uid://cqccs7gpefk5s" path="res://assets/fonts/Font themes/Main_font.tres" id="5_x6nev"]

[sub_resource type="LabelSettings" id="LabelSettings_wdh1h"]
font = ExtResource("3_aqxog")
font_size = 200
font_color = Color(0.973198, 0.966137, 0.980731, 1)

[node name="SimpleMenuCanvasLayer" type="CanvasLayer"]
script = ExtResource("1_w5nt6")
next_scene = "uid://bu1naq7bgris4"

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MainMenuContent" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_x6nev")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MainMenuContent"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 30

[node name="TitleLabel" type="Label" parent="MainMenu/MainMenuContent/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "passerelle"
label_settings = SubResource("LabelSettings_wdh1h")

[node name="ExitGameButton" type="Button" parent="MainMenu/MainMenuContent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("5_x6nev")
text = "MENU_EXIT_GAME"

[node name="VersionLabel" type="Label" parent="MainMenu/MainMenuContent"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "v1.0.0"

[node name="MainMenuButtons" type="CenterContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_x6nev")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MainMenuButtons"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="StartGameButton" type="Button" parent="MainMenu/MainMenuButtons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MENU_START"

[node name="SettingsButton" type="Button" parent="MainMenu/MainMenuButtons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MENU_SETTINGS"

[node name="CreditsButton" type="Button" parent="MainMenu/MainMenuButtons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MENU_CREDITS"
